web-infras/parser/tests/fixtures/esprima/es2017/for-statement/invalid-var-init-forin1/output.txt
[SyntaxError]: 'for-in' loop variable declaration may not have an initializer. (1,24)
1|"use strict"; for (var i=0 in j);
 |                      ^
